Menambahkan paragraf panjang

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>Halo coba git remote nih</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas error porro eligendi incidunt nesciunt reiciendis voluptates, maxime ut eius impedit molestiae, et accusamus nemo eum cumque laborum accusantium cum ad.</p>
 </body>
 </html>
